initial delete implementation and fix of dispatch table overflow column

--- a/src/app/feature/cliente/components/listar-cliente/listar-cliente.component.sass
+++ b/src/app/feature/cliente/components/listar-cliente/listar-cliente.component.sass
@@ -2,24 +2,18 @@ h1
   text-align: center
   margin-top: 1rem
   font-weight: bold
-
 .container
   margin-top: 2rem
   display: flex
   justify-content: center
   flex-direction: column
   overflow-x: auto
-
-.mat-table
-  overflow: auto
-
 .mat-header-cell
   padding: 0.5rem
   text-align: center
 .mat-cell
   padding: 0.5rem
   text-align: center
-
 .options
   display: flex
   justify-content: flex-end
