--- a/src/app/feature/envio/components/listar-envio/listar-envio.component.sass
+++ b/src/app/feature/envio/components/listar-envio/listar-envio.component.sass
@@ -1,9 +1,11 @@
+@import "../../../../../assets/sass/modules/_mixins.sass"
+
 .container
   margin-top: 2rem
   display: flex
   justify-content: center
+  flex-direction: column
   overflow-x: auto
-
 .mat-table
   overflow: auto
 .mat-header-cell
@@ -12,3 +14,9 @@
 .mat-cell
   padding: 0.5rem
   text-align: center
+.action-link
+  min-width: 97px
+.action-link > a
+  margin-right: 1rem
+.action-link > a:last-child
+  margin-right: 0rem
